# MuckyFoot-UrbanChaos

./: CMakeLists.txt  Cargo.toml  LICENSE.md  README.md
MFStdLib/: CMakeLists.txt
MFStdLib/Headers/: MFStdLib.h  StdFile.h  StdKeybd.h  StdMaths.h  StdMem.h
MFStdLib/Source/StdLib/: StdFile.cpp  StdMaths.cpp  StdMem.cpp
fallen/: CMakeLists.txt  Fallen.dsp  Fallen.sln  Fallen.vcxproj  Fallen.vcxproj.filters  GEdit.dsp  UpgradeLog.htm  cdsrc.bat  clumps.bat  compress.bat  copysrc.bat  doneclumps.bat  english.bat  englishsrc.bat  french.bat  frenchsrc.bat  german.bat  germansrc.bat
fallen/AutoRun/: AutoRun.cpp  AutoRun.dsp  AutoRun.h  AutoRun.rc  Director.cpp  Director.h  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h
fallen/AutoRun/Autorun/: English.txt  French.txt  German.txt  Spanish.txt
fallen/DDEngine/: CMakeLists.txt
fallen/DDEngine/Headers/: BreakTimer.h  Bucket.h  Crinkle.h  DCback.h  DCcredits.h  DCfont.h  DCos.h  DrawXtra.h  Engine.h  Font.h  Gamut.h  Matrix.h  Message.h  NGamut.h  Quaternion.h  Text.h  aa.h  aeng.h  build.h  comp.h  cone.h  console.h  facet.h  fall.h  farfacet.h  fastprim.h  figure.h  flamengine.h  font2d.h  font3d.h  ic.h  map.h  menufont.h  mesh.h  oval.h  pack.h  panel.h  planmap.h  poly.h  polypage.h  (+15 more)
fallen/DDEngine/Source/: Attract.cpp  BreakTimer.cpp  Bucket.cpp  Crinkle.cpp  DCback.cpp  DCcredits.cpp  DCfont.cpp  DCos.cpp  Font.cpp  Gamut.cpp  Matrix.cpp  Message.cpp  NGamut.cpp  Quaternion.cpp  Temp.cpp  Text.cpp  aa.cpp  aeng.cpp  build.cpp  comp.cpp  cone.cpp  console.cpp  drawxtra.cpp  facet.cpp  farfacet.cpp  fastprim.cpp  figure.cpp  flamengine.cpp  font2d.cpp  font3d.cpp  ic.cpp  map.cpp  menufont.cpp  mesh.cpp  oval.cpp  pack.cpp  panel.cpp  planmap.cpp  poly.cpp  polypage.cpp  (+17 more)
fallen/DDLibrary/: CMakeLists.txt  DDlib.rc  arrowcop.cur
fallen/DDLibrary/Headers/: A3DManager.h  AsyncFile.h  AsyncFile2.h  BinkClient.h  D3DTexture.h  DCLowLevel.h  DDManager.h  DDlib.h  DIManager.h  DSManager.h  Debug.h  Drive.h  FFManager.h  FileClump.h  GDisplay.h  GWorkScreen.h  MFX_Miles.h  MFx.h  QSManager.h  SampleManager.h  Tga.h  WindProcs.h  net.h  resource.h  snd_type.h
fallen/DDLibrary/Source/: A3DManager.cpp  AsyncFile.cpp  AsyncFile2.cpp  BinkClient.cpp  D3DTexture.cpp  DCLowLevel.cpp  DDManager.cpp  DIManager.cpp  DSManager.cpp  Drive.cpp  FFManager.cpp  FileClump.cpp  GDebug.cpp  GDisplay.cpp  GFile.cpp  GHost.cpp  GKeyboard.cpp  GMouse.cpp  GWorkScreen.cpp  MFX_DC.cpp  MFX_Miles.cpp  MFx.cpp  MFx_QMDX.cpp  QSManager.cpp  SampleManager.cpp  Tga.cpp  WindProcs.cpp  net.cpp
fallen/Debug/Fallen.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Fallen.lastbuildstate
fallen/Editor/: CMakeLists.txt
fallen/Editor/Headers/: Alert.hpp  Anim.h  BuildTab.hpp  ColTab.hpp  ComTab.h  CondTab.h  Controls.hpp  CtrlSet.hpp  DarkCity.h  EdCom.h  EdUtils.h  EdWay.h  Edit.h  EditMod.hpp  Editor.h  Editor.hpp  EditorLib.h  FileReq.hpp  GameEd.h  HmTab.hpp  Icon.hpp  Intrface.hpp  KFrameEd.hpp  KFramer.hpp  LevelEd.hpp  LightTab.hpp  MapEdTab.hpp  MapTab.hpp  ModeTab.hpp  ObjectEd.hpp  PaintTab.hpp  Poly.h  PrPiTab.hpp  Prim.h  Primativ.hpp  SaveTab.h  Stealth.h  Structs.h  TexTab.hpp  Thing.h  (+20 more)
fallen/Editor/Source/: Alert.cpp  BuildTab.cpp  ColTab.cpp  ComTab.cpp  ComTab.def  CondTab.cpp  CondTab.def  Control.cpp  Controls.cpp  CtrlSet.cpp  EdCom.cpp  EdText.cpp  EdUtils.cpp  EdWay.cpp  Edit.cpp  EditMod.cpp  Editor.cpp  Engine.cpp  FileReq.cpp  Game.cpp  GameEd.cpp  HmTab.cpp  Icon.cpp  Intrface.cpp  KFDef.c  KFDef2.c  KFrameEd.cpp  KFramer.cpp  LevelEd.cpp  LightTab.cpp  Main.cpp  MapEdTab.cpp  MapTab.cpp  ModeTab.cpp  Move.cpp  PaintTab.cpp  Poly.cpp  PrPiTab.cpp  Primativ.cpp  Quaternion.cpp  (+22 more)
fallen/GEdit/: CMakeLists.txt
fallen/GEdit/Headers/: EdStrings.h  EnemySetup.h  EngWind.h  MapExitSetup.h  MapView.h  WayWind.h  activatesetup.h  cutscene.h  inputbox.h  platformSetup.h  propedit.h  ticklist.h  trapsetup.h  waypointSetup.h
fallen/GEdit/Source/: BonusSetup.cpp  (+27 more)
fallen/Headers/: Attract.h  CamTargetSetup.h  Camera.h  CameraSetup.h  Command.h  Controls.h  Cop.h  Darci.h  Editor.h  Engine.h  Enter.h  Env.h  FMatrix.h  Furn.h  GEdit.h  Game.h  Hierarchy.h  ItemSetup.h  Level.h  Map.h  Mission.h  Nav.h  PSystem.h  Person.h  Pjectile.h  Player.h  PlayerSetup.h  Roper.h  Sound.h  Special.h  State.h  Structs.h  SubClass.h  Switch.h  TabCtl.h  Thing.h  Thug.h  TriggerSetup.h  WSpace.h  Wallhug.h  (+99 more)
fallen/Ledit/: CMakeLists.txt
fallen/Loader/: Loader.dsp
fallen/PSXENG/: psxeng.dsp
fallen/SoundConverter/: SoundConverter.dsp  soundconv.cpp
fallen/Source/: Anim.cpp  Attract.cpp  Camera.cpp  Command.cpp  Controls.cpp  Cop.cpp  CreatureSetup.cpp  Darci.cpp  EdStrings.cpp  Effect.cpp  Enemy.cpp  EnemySetup.cpp  Enter.cpp  Env.cpp  ExtendSetup.cpp  FMatrix.cpp  Furn.cpp  GEdit.cpp  Game.cpp  Hierarchy.cpp  ItemSetup.cpp  Level.cpp  Levelpsx.cpp  Main.cpp  Map.cpp  MapExitSetup.cpp  MapView.cpp  MessageSetup.cpp  Nav.cpp  PeeSetup.cpp  Person.cpp  Pjectile.cpp  Player.cpp  Prim.cpp  ResetSetup.cpp  Roper.cpp  Sound.cpp  Special.cpp  State.cpp  Switch.cpp  (+118 more)
fallen/UnInst/: UnInst.c  UnInst.dsp  uninst.def  uninst.rc
fallen/dxinstall/: dinstall.c  dinstall.rc  dxinstall.dsp  readme.txt  resource.h  wincode.c
fallen/outro/: Always.h  CMakeLists.txt  Key.h  Matrix.cpp  Matrix.h  Tga.cpp  Tga.h  back.cpp  cam.cpp  checker.cpp  checker.h  credits.cpp  credits.h  font.cpp  imp.cpp  imp.h  lmap.h  main.cpp  mf.cpp  mf.h  midasdll.h  os.cpp  os.h  outro.dsp  slap.cpp  wire.cpp  wire.h
fallen/psxlib/: psxlib.dsp
fallen/psxlib1/: ErrorLog.txt  LibsToDo.txt  MFLib.ptg  MFLib.tag  MakeLibs  MakeLibs.bat  W_DOS1_D.LBC  W_DOS1_R.LBC  W_WIN1_D.LBC  W_WIN1_R.LBC  mfstdlib.dsp  mfstdlib.dsw  mfstdlib.opt  psxlib1.dsw  psxlib1.opt  update.PIF  update.bat
fallen/sedit/: CMakeLists.txt
fallen/server/: extract.bat
fallen/text/: lang_english.txt  lang_french.txt  lang_german.txt
openchaos-config/: Cargo.toml
openchaos-config/src/: lib.rs
openchaos-ffi/: Cargo.toml
openchaos-ffi/include/: env.h
openchaos-ffi/src/: env.rs  lib.rs
(+262 files in other folders)
