add_subdirectory(DDEngine)
add_subdirectory(DDLibrary)
add_subdirectory(outro)
set(FALLEN_HEADERS
    Editor/Headers/Anim.h
    Editor/Headers/Prim.h
    Headers/Attract.h
    Headers/Controls.h
    Headers/Cop.h
    Headers/Env.h
    Headers/FMatrix.h
    Headers/Game.h
    Headers/Hierarchy.h
    Headers/Map.h
    Headers/PSystem.h
    Headers/Pjectile.h
    Headers/Player.h
    Headers/Roper.h
    Headers/Special.h
    Headers/Sound.h
    Headers/Thing.h
    Headers/animal.h
    Headers/animtmap.h
    Headers/balloon.h
    Headers/barrel.h
    Headers/build2.h
    Headers/building.h
    Headers/canid.h
    Headers/cnet.h
    Headers/collide.h
    Headers/dirt.h
    Headers/door.h
    Headers/drip.h
    Headers/drawtype.h
    Headers/elev.h
    Headers/eway.h
    Headers/fc.h
    Headers/fire.h
    Headers/fog.h
    Headers/frontend.h
    Headers/gamemenu.h
    Headers/glitter.h
    Headers/grenade.h
    Headers/guns.h
    Headers/hook.h
    Headers/inside2.h
    Headers/interact.h
    Headers/memory.h
    Headers/mist.h
    Headers/morph.h
    Headers/music.h
    Headers/night.h
    Headers/ns.h
    Headers/ob.h
    Headers/overlay.h
    Headers/pap.h
    Headers/pcom.h
    Headers/playcuts.h
    Headers/pow.h
    Headers/puddle.h
    Headers/ribbon.h
    Headers/road.h
    Headers/shadow.h
    Headers/sm.h
    Headers/snipe.h
    Headers/soundenv.h
    Headers/spark.h
    Headers/tracks.h
    Headers/trip.h
    Headers/walkable.h
    Headers/ware.h
    Headers/widget.h
    Headers/wmove.h
    Headers/xlat_str.h)
set(FALLEN_SOURCES
    Source/Anim.cpp
    Source/Attract.cpp
    Source/Controls.cpp
    Source/Cop.cpp
    Source/Darci.cpp
    Source/FMatrix.cpp
    Source/Game.cpp
    Source/Hierarchy.cpp
    Source/Main.cpp
    Source/Map.cpp
    Source/Person.cpp
    Source/Pjectile.cpp
    Source/Player.cpp
    Source/Prim.cpp
    Source/Roper.cpp
    Source/Sound.cpp
    Source/Special.cpp
    Source/State.cpp
    Source/Thing.cpp
    Source/animal.cpp
    Source/animtmap.cpp
    Source/balloon.cpp
    Source/barrel.cpp
    Source/bat.cpp
    Source/build2.cpp
    Source/building.cpp
    Source/canid.cpp
    Source/chopper.cpp
    Source/collide.cpp
    Source/combat.cpp
    Source/cnet.cpp
    Source/dirt.cpp
    Source/door.cpp
    Source/drip.cpp
    Source/drawtype.cpp
    Source/elev.cpp
    Source/env2.cpp
    Source/eway.cpp
    Source/fc.cpp
    Source/fire.cpp
    Source/fog.cpp
    Source/frontend.cpp
    Source/gamemenu.cpp
    Source/glitter.cpp
    Source/grenade.cpp
    Source/guns.cpp
    Source/heap.cpp
    Source/hook.cpp
    Source/inside2.cpp
    Source/interact.cpp
    Source/interfac.cpp
    Source/io.cpp
    Source/maths.cpp
    Source/mav.cpp
    Source/memory.cpp
    Source/mist.cpp
    Source/morph.cpp
    Source/music.cpp
    Source/night.cpp
    Source/ns.cpp
    Source/ob.cpp
    Source/overlay.cpp
    Source/pap.cpp
    Source/pcom.cpp
    Source/plat.cpp
    Source/playcuts.cpp
    Source/pow.cpp
    Source/psystem.cpp
    Source/puddle.cpp
    Source/pyro.cpp
    Source/ribbon.cpp
    Source/road.cpp
    Source/shadow.cpp
    Source/sm.cpp
    Source/snipe.cpp
    Source/sound_id.cpp
    Source/soundenv.cpp
    Source/spark.cpp
    Source/startscr.cpp
    Source/supermap.cpp
    Source/tracks.cpp
    Source/trip.cpp
    Source/vehicle.cpp
    Source/walkable.cpp
    Source/wand.cpp
    Source/ware.cpp
    Source/widget.cpp
    Source/wmove.cpp
    Source/xlat_str.cpp)
source_group(Headers
    FILES ${FALLEN_HEADERS})
source_group(Source
    FILES ${FALLEN_SOURCES})
add_executable(fallen WIN32 MACOSX_BUNDLE
    ${FALLEN_HEADERS}
    ${FALLEN_SOURCES})
target_include_directories(fallen
    PRIVATE
        ..
        Headers
        GEdit/Headers
        Ledit/Headers
        sedit/Headers)
target_link_libraries(fallen
    DDEngine
    DDLibrary
    Outro)
