target_compile_definitions(
    fallen
    PRIVATE
        $<$<CONFIG:Debug>:EDITOR>
        $<$<OR:$<CONFIG:MinSizeRel>,$<CONFIG:Release>,$<CONFIG:RelWithDebInfo>>:FINAL>
)
target_include_directories(
    fallen
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}
        ${CMAKE_CURRENT_LIST_DIR}/../MFStdLib/Headers
        ${CMAKE_CURRENT_LIST_DIR}/DDEngine/Headers
        ${CMAKE_CURRENT_LIST_DIR}/DDLibrary/Headers
        ${CMAKE_CURRENT_LIST_DIR}/Headers
        ${CMAKE_CURRENT_LIST_DIR}/Editor/Headers
        ${CMAKE_CURRENT_LIST_DIR}/GEdit/Headers
        ${CMAKE_CURRENT_LIST_DIR}/Ledit/Headers
        ${CMAKE_CURRENT_LIST_DIR}/sedit/Headers
)
target_link_libraries(
    fallen
    PRIVATE
        ddengine
        ddlibrary
        mfstdlib
        outro
        $<$<CONFIG:Debug>:editor>
        $<$<CONFIG:Debug>:gedit>
        $<$<CONFIG:Debug>:ledit>
        $<$<CONFIG:Debug>:sedit>
)
target_sources(
    fallen
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Attract.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Cop.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Darci.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Env.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/FMatrix.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Game.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Hierarchy.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Map.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/PSystem.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Pjectile.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Player.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Roper.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Sound.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Special.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/State.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/Thing.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/animal.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/animtmap.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/balloon.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/barrel.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/bat.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/build2.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/building.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/canid.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/chopper.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/cnet.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/collide.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/demo.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/dirt.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/door.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/drawtype.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/drip.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/elev.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/fc.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/fire.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/fog.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/frontend.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/glitter.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/grenade.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/guns.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/hook.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/inside2.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/interfac.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/mav.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/mist.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/morph.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/music.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/night.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/ns.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/ob.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/overlay.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/pap.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/pcom.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/plat.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/playcuts.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/pow.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/puddle.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/pyro.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/ribbon.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/road.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/shadow.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/sm.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/snipe.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/sound_id.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/spark.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/supermap.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/tracks.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/trip.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/wand.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/ware.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/widget.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/wmove.h
        ${CMAKE_CURRENT_LIST_DIR}/Headers/xlat_str.h
        ${CMAKE_CURRENT_LIST_DIR}/Source/Anim.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Attract.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Controls.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Cop.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Darci.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/FMatrix.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Game.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Hierarchy.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Main.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Map.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Person.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Pjectile.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Player.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Prim.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Roper.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Sound.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Special.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/State.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/Thing.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/animal.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/animtmap.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/balloon.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/barrel.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/bat.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/build2.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/building.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/canid.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/chopper.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/cnet.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/collide.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/combat.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/dirt.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/door.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/drawtype.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/drip.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/elev.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/env2.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/eway.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/fc.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/fire.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/fog.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/frontend.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/gamemenu.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/glitter.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/grenade.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/guns.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/heap.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/hook.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/inside2.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/interact.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/interfac.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/io.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/maths.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/mav.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/memory.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/mist.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/morph.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/music.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/night.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/ns.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/ob.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/overlay.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/pap.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/pcom.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/plat.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/playcuts.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/pow.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/psystem.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/puddle.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/pyro.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/ribbon.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/road.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/shadow.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/sm.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/snipe.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/sound_id.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/spark.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/startscr.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/supermap.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/tracks.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/trip.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/vehicle.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/walkable.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/wand.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/ware.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/widget.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/wmove.cpp
        ${CMAKE_CURRENT_LIST_DIR}/Source/xlat_str.cpp
        $<$<CONFIG:Debug>:${CMAKE_CURRENT_LIST_DIR}/Headers/hm.h>
        $<$<CONFIG:Debug>:${CMAKE_CURRENT_LIST_DIR}/Source/hm.cpp>
)
if(WIN32)
    target_link_libraries(
        fallen
        PRIVATE
            amstrmid
            ddraw
            dinput8
            dsound
            dxguid
            winmm
            $<$<CONFIG:Debug>:comctl32>
    )
endif(WIN32)
